# django-bootstrap-swt

./: .gitignore  .sonarcloud.properties  MANIFEST.in  README.md  README.rst  manage.py  package.json  requirements.txt  setup.cfg  setup.py  sonar-project.properties  test-requirements.txt
.github/workflows/: publish.yml  sonar.yml
coverage-reports/: coverage-report.xml
django_bootstrap_swt/: apps.py  components.py  enums.py  requirements.txt  settings.py  utils.py
django_bootstrap_swt/static/django_bootstrap_swt/js/: django_bootstrap_swt.js
django_bootstrap_swt/templates/django_bootstrap_swt/components/: accordion.html  accordion_ajax.html  badge.html  button.html  button_group.html  card.html  card_body.html  card_footer.html  card_header.html  div.html  dropdown.html  link.html  list_group_item.html  modal.html  modal_ajax.html  progressbar.html  tag.html  tooltip.html
django_bootstrap_swt/templates/django_bootstrap_swt/includes/: ajax_error.html  ajax_loading_spinner.html
docs/: conf.py  index.rst
docs/pages/: ajax.rst  examples.rst  installation.rst  tutorial.rst
js_tests/: index.html  modal.html  test_django_bootstrap_swt.js
tests/: nosecover.xml  nosetests.xml  requirements.txt  test_components.py  test_utils.py
tests/app/: settings.py
tests/app/templates/: dummy.html
tests/app/templates/components/accordion/: test_accordion_body_bg_color.html  test_accordion_body_border_color.html  (+10 more)
tests/coverage-reports/: coverage-report.xml  xunit-report.xml
tests/xunit-reports/: xunit-result.xml
xunit-reports/: xunit-result.xml
(+61 files in other folders)
