[metadata]
name = django-bootstrap-swt
version = 0.0.1a1
description = A Django app to simplifies the task of building HTML pages with bootstrap components.
long_description = file: README.rst
url = https://github.com/jokiefer/django-bootstrap-swt
author = Jonas Kiefer
author_email = jonas.kiefer@live.com
license = GNU GPLv3
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find: